# live2d-cubism-core-sys

./: Cargo.toml  LICENSE-MIT  README.md
src/: build.rs  core.rs  lib.rs  memory.rs  sys.rs  wrapper.h
src/core/: base_types.rs  internal.rs  model_types.rs
src/core/internal/: platform_iface.rs  platform_impl_native.rs  platform_impl_web.rs
