[package]
name = "live2d-cubism-core-sys"
authors = ["https://github.com/James2022-rgb"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[dependencies]
log = "0.4"
static_assertions = "1.1.0"
shrinkwraprs = "0.3.0"
derive_more = "0.99.17"
num_enum = "0.5.7"
flagset = "0.4.3"
mint = "0.5.9"
itertools = "0.10.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "0.2.0"
wasm-bindgen-test = "0.3.33"

[build-dependencies]
bindgen = "0.63.0"
