[package]
name = "live2d-cubism-core-sys"
authors = ["https://github.com/James2022-rgb"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[features]
default = ["core"]
core = ["dep:log", "dep:static_assertions", "dep:thiserror", "dep:shrinkwraprs", "dep:derive_more", "dep:num_enum", "dep:flagset", "dep:mint", "dep:itertools"]

[dependencies]
log = { version = "0.4", optional = true }
static_assertions = { version = "1.1.0", optional = true }
thiserror = { version = "1.0", optional = true }
shrinkwraprs = { version = "0.3.0", optional = true }
derive_more = { version = "0.99.17", optional = true }
num_enum = { version = "0.5.7", optional = true }
flagset = { version = "0.4.3", optional = true }
mint = { version = "0.5.9", optional = true }
itertools = { version = "0.10.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "0.2.0"
wasm-bindgen-test = "0.3.33"

[build-dependencies]
bindgen = "0.63.0"
